added all necessary components and stylesheets

--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -1,5 +1,5 @@
-.App {
+@mixin center {
     display: flex;
     justify-content: center;
-    align-items: center;
-}
+    // align-items: center;
+  }
