--- a/src/components/_ProjectRow1.scss
+++ b/src/components/_ProjectRow1.scss
@@ -2,3 +2,9 @@
     display: flex;
     justify-content: space-between;
 }
+
+@media only screen and (max-width: 500px) {
+    .ProjectRow1 {
+        flex-direction: column;
+    }
+  }
