--- a/src/components/_ProjectRow2.scss
+++ b/src/components/_ProjectRow2.scss
@@ -11,4 +11,10 @@
         justify-content: space-between;
         flex-direction: row;
     }
+
+    @media only screen and (max-width: 500px) {
+        .ProjectRow2-group {
+            flex-direction: column;
+        }
+      }
 }
