added header component

--- a/src/pages/_Home.scss
+++ b/src/pages/_Home.scss
@@ -3,6 +3,10 @@
 .Home {
 
     &-icons {
-        @include center
+        @include center;
+
+        &:hover {
+            cursor: pointer;
+        }
     }
 }
