added react smooth scroll

--- a/src/pages/_Home.scss
+++ b/src/pages/_Home.scss
@@ -1,12 +1,9 @@
 @import '../styles/_mixins';
 
 .Home {
-
+    min-height: 100vh;
     &-icons {
         @include center;
-
-        &:hover {
-            cursor: pointer;
-        }
+        @include pointer;
     }
 }
