--- a/src/components/Navigation/_Header.scss
+++ b/src/components/Navigation/_Header.scss
@@ -1,8 +1,12 @@
+@import '../../styles/_mixins';
+
 /*Desktop View*/
 .header {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    top: 0;
+    border: 1px solid green;
     // padding: 0px 40px;
     height: 80px;
     max-width: 1200px;
@@ -36,6 +40,8 @@
             & a {
                 text-decoration: none;
                 color: inherit;
+
+                @include pointer;
             }
         }
 
