--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -3,3 +3,9 @@
     justify-content: center;
     // align-items: center;
   }
+
+  @mixin pointer {
+    &:hover {
+      cursor: pointer;
+  }
+  }
