--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -9,3 +9,10 @@
       cursor: pointer;
   }
   }
+
+  @mixin center-vertically {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
