--- a/src/components/_Icon.scss
+++ b/src/components/_Icon.scss
@@ -3,4 +3,15 @@
     margin: 0 20px 30px;
     width: 60px;
     height: 60px;
+    transition: transform 250ms;
+
+    &:hover {
+        transform: translateY(-10px);
+    }
 }
+
+@media only screen and (max-width: 700px) {
+    .fa-4x {
+        margin: 0.5rem;
+    }
+  }
