--- a/src/components/_Icon.scss
+++ b/src/components/_Icon.scss
@@ -1,3 +1,5 @@
+@import '../styles/_mixins';
+
 .fa-4x {
     margin: 0.5rem;
     margin: 0 20px 30px;
@@ -5,9 +7,7 @@
     height: 60px;
     transition: transform 250ms;
 
-    &:hover {
-        transform: translateY(-10px);
-    }
+    @include hoverAnimation;
 }
 
 @media only screen and (max-width: 700px) {
