--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -16,3 +16,9 @@
     justify-content: center;
     align-items: center;
   }
+
+  @mixin hoverAnimation {
+    &:hover {
+      transform: translateY(-10px);
+  }
+  }
