--- a/src/components/_ProjectSmall.scss
+++ b/src/components/_ProjectSmall.scss
@@ -14,30 +14,51 @@
             color: yellow;
             position: absolute;
             top: 40%;
+            opacity: 0;
         }
 
         img {
             width: 100%;
-            background-color: rgba(141, 153, 174, 0.5);
+            background-color: rgba(141, 153, 174, 1);
             position: relative;
             
 
-            &:hover {
-                z-index: 1;
-                cursor: pointer;
-                background-color: rgba(141, 153, 174, 1);
-            }
+            // &:hover {
+            //     z-index: 1;
+            //     cursor: pointer;
+            //     background-color: rgba(141, 153, 174, 1);
+            // }
         }
+
+
     }
 
     &-view {
         display: flex;
         justify-content: space-between;
     }
+
+    &:hover {
+        .ProjectSmall-main-info{
+            opacity: 1;
+        }
+
+        img {
+            background-color: rgba(141, 153, 174, 0.5);
+        }
+    }
 }
 
 @media only screen and (max-width: 700px) {
     .ProjectSmall {
         width: 100%;
+
+        &-main-info{
+            opacity: 1;
+        }
+
+        img {
+            background-color: rgba(141, 153, 174, 0.5);
+        }
     }
   }
