--- a/src/components/_Project.scss
+++ b/src/components/_Project.scss
@@ -17,6 +17,7 @@
 
         img {
             width: 100%;
+            background-color: rgba(255, 243, 79, 0.1);
         }
     }
 
@@ -61,11 +62,16 @@
 
 @media only screen and (max-width: 700px) {
     .Project {
-
+        position: relative;
         &-image {
             position: absolute;
+            top: 0;
             width: 100%;
-            height: 46.5%;
+            height: 100%;
+
+            img {
+                height: 100%
+            }
         }
 
         &-detail {
