--- a/src/components/_ProjectRow2.scss
+++ b/src/components/_ProjectRow2.scss
@@ -12,7 +12,7 @@
         margin-top: 2em;
         border: 1px solid yellow;
         display: flex;
-        justify-content: space-between;
+        justify-content: space-evenly;
         flex-direction: row;
     }
 
