--- a/src/components/_ProjectSmall.scss
+++ b/src/components/_ProjectSmall.scss
@@ -1,5 +1,8 @@
+@import '../styles/_mixins';
+
 .ProjectSmall {
     width: 30%;
+    transition: transform 250ms;
 
     &-main {
         // width: 30%;
@@ -10,11 +13,15 @@
         &-info {
             width: 100%;
             // height: 50%;
-            border: 1px solid red;
+            // border: 1px solid red;
             color: yellow;
             position: absolute;
-            top: 40%;
+            top: 25%;
             opacity: 0;
+
+            h3 {
+                margin-bottom: -0.5em;
+            }
         }
 
         img {
@@ -35,7 +42,12 @@
 
     &-view {
         display: flex;
-        justify-content: space-between;
+        justify-content: flex-end;
+        border: 1px solid green;
+
+        p {
+            margin-top: 3px;
+        }
     }
 
     &:hover {
@@ -45,6 +57,17 @@
 
         img {
             background-color: rgba(141, 153, 174, 0.5);
+        }
+    }
+
+    @include hoverAnimation;
+}
+
+@media only screen and (max-width: 830px) and (min-width: 701px) {
+
+    .ProjectSmall {
+        &-main-info {
+            top: 5%;
         }
     }
 }
