--- a/src/components/Navigation/_Header.scss
+++ b/src/components/Navigation/_Header.scss
@@ -32,21 +32,29 @@
         display: flex;
         flex-direction: row;
         list-style-type: none;
+        justify-content: center;
+        align-items: center;
 
         .option {
             margin-right: 1em;
             
             & a {
                 text-decoration: none;
+                font-weight: bold;
                 color: inherit;
 
                 @include pointer;
+
+                &:hover {
+                  color: grey;
+                }
             }
         }
 
-        .option :hover {
-            color: white;
-          }
+        .resume {
+          border: 1px solid black;
+          padding: 0.5em;
+        }
       }
 
       &-mobile-menu {
@@ -79,7 +87,7 @@
         grid-gap: 0px; 
 
         &.active {
-            background: #525252;
+            background: #fff;
             left: 0;
             opacity: 1;
             transition: all 0.5s ease;
@@ -94,6 +102,11 @@
             justify-content: center;
             height: 10vw;
             padding: 30px 0px;
+          }
+
+          .resume {
+            border: 1px solid black;
+            padding: 0.5em;
           }
       }
 
