--- a/src/components/Navigation/_Header.scss
+++ b/src/components/Navigation/_Header.scss
@@ -76,7 +76,7 @@
       &-nav-options {
         display: flex;
         width: 100%;
-        height: 350px;
+        height: 360px;
         position: absolute;
         top: 80px;
         left: -100%;
@@ -101,12 +101,13 @@
             align-items: center;
             justify-content: center;
             height: 10vw;
-            padding: 30px 0px;
+            padding: 10px 0px;
           }
 
           .resume {
             border: 1px solid black;
             padding: 0.5em;
+            margin-bottom: 2em;
           }
       }
 
