--- a/src/pages/_Home.scss
+++ b/src/pages/_Home.scss
@@ -1,5 +1,14 @@
 @import '../styles/_mixins';
 
+@-webkit-keyframes action {
+    0% { transform: translateY(0); }
+    100% { transform: translateY(-10px); }
+}
+@keyframes action {
+    0% { transform: translateY(0); }
+    100% { transform: translateY(-10px); }
+}
+
 .Home {
     @include center-vertically;
     min-height: 100vh;
@@ -8,14 +17,23 @@
         @include center;
         @include pointer;
         margin-top: 1em;
+        margin-bottom: 2em;
     }
 
     h1 {
         width: 50%;
-        // margin: auto;
         margin-bottom: 1em;
         margin-left: auto;
         margin-right: auto;
+    }
+
+    &-down {
+        display: flex;
+        justify-content: center;
+        position: relative;
+        bottom: 10%;
+        -webkit-animation: action 1s infinite  alternate;
+        animation: action 1s infinite  alternate;
     }
 }
 
@@ -24,6 +42,21 @@
         h1 {
             width: 100%;
             margin-top: -4em;
+        }
+
+        &-down {
+            bottom: 20%;
+        }
+    }
+  }
+
+  @media only screen and (max-width: 360px) {
+    .Home {
+        h1 {
+            margin-top: 0;
+        }
+        &-down {
+            display: none;
         }
     }
   }
