--- a/src/components/_ProjectSmall.scss
+++ b/src/components/_ProjectSmall.scss
@@ -3,7 +3,7 @@
 .ProjectSmall {
     width: 30%;
     transition: transform 250ms;
-
+    
     &-main {
         // width: 30%;
         border: 1px solid green;
@@ -14,7 +14,7 @@
             width: 100%;
             // height: 50%;
             // border: 1px solid red;
-            color: yellow;
+            color: rgb(255, 255, 255);
             position: absolute;
             top: 25%;
             opacity: 0;
@@ -28,13 +28,12 @@
             width: 100%;
             background-color: rgba(141, 153, 174, 1);
             position: relative;
-            
+            filter: grayscale(100%);
+            transition: .2s ease;
 
-            // &:hover {
-            //     z-index: 1;
-            //     cursor: pointer;
-            //     background-color: rgba(141, 153, 174, 1);
-            // }
+            &:hover {
+                filter: grayscale(0%);
+            }
         }
 
 
