--- a/src/pages/_About.scss
+++ b/src/pages/_About.scss
@@ -4,7 +4,7 @@
     @include center;
     min-height: 100vh;
     flex-direction: column;
-    border: 1px solid brown;
+    // border: 1px solid brown;
 
     h1 {
         text-align: center;
