--- a/src/pages/_Contact.scss
+++ b/src/pages/_Contact.scss
@@ -7,7 +7,7 @@
     min-height: 100vh;
 
     &-games {
-        border: 1px solid brown;
+        // border: 1px solid brown;
         @include center;
     }
 }
