--- a/src/components/_Project.scss
+++ b/src/components/_Project.scss
@@ -2,22 +2,26 @@
 
 .Project {
     margin-bottom: 1em;
-    border: 1px solid green;
+    // border: 1px solid green;
     @include center-vertically;
     flex-direction: row;
-
+    color: #353535;
 
     &-image {
-        border: 1px solid blue;
+        // border: 1px solid blue;
         width: 50%;
+        position: relative;
+        // z-index: -1;
+        filter: grayscale(100%);
 
         &:hover {
             z-index: 1;
+            filter: grayscale(0%);
         }
 
         img {
             width: 100%;
-            background-color: rgba(255, 243, 79, 0.1);
+            border-radius: 5%;
         }
     }
 
@@ -25,9 +29,14 @@
     &-detail {
         width: 50%;
         height: 50%;
-        background-color: grey;
+        // background-color: grey;
+        background-color: #fff;
+        box-shadow: 6px 9px 5px 0px rgba(0,0,0,0.11)
+        ;
+        border-radius: 5%;
         margin-left: -5em;
         padding: 0.5em;
+        position: relative;
 
         &-technology {
             display: flex;
@@ -68,6 +77,13 @@
             top: 0;
             width: 100%;
             height: 100%;
+            z-index: -1;
+            opacity: 0.4;
+            // &-overlay {
+            //     // background-color: rgba(0, 0, 0, 0.1);
+            //     position: relative;
+            //     height: 100%;
+            // }
 
             img {
                 height: 100%
@@ -78,6 +94,11 @@
             width: 100%;
             background-color: transparent;
             margin-left: 0;
+
+            p {
+            font-weight: bold;
+
+            }
         }
     }
 }
