--- a/src/components/_ProjectRow2.scss
+++ b/src/components/_ProjectRow2.scss
@@ -10,7 +10,7 @@
 
     &-group {
         margin-top: 2em;
-        border: 1px solid yellow;
+        // border: 1px solid yellow;
         display: flex;
         justify-content: space-evenly;
         flex-direction: row;
