--- a/src/components/_ProjectSmall.scss
+++ b/src/components/_ProjectSmall.scss
@@ -3,10 +3,17 @@
 .ProjectSmall {
     width: 30%;
     transition: transform 250ms;
+
+    &:hover {
+        img {
+            filter: grayscale(0%);
+            opacity: 0.4;
+        }
+    }
     
     &-main {
         // width: 30%;
-        border: 1px solid green;
+        // border: 1px solid green;
         // display: flex;
         position: relative;
 
@@ -14,7 +21,9 @@
             width: 100%;
             // height: 50%;
             // border: 1px solid red;
-            color: rgb(255, 255, 255);
+            // color: rgb(255, 255, 255);
+            font-weight: bold;
+            color: #353535;
             position: absolute;
             top: 25%;
             opacity: 0;
@@ -22,6 +31,10 @@
             h3 {
                 margin-bottom: -0.5em;
             }
+
+            // &-text {
+            //     font-weight: bold;
+            // }
         }
 
         img {
@@ -30,10 +43,7 @@
             position: relative;
             filter: grayscale(100%);
             transition: .2s ease;
-
-            &:hover {
-                filter: grayscale(0%);
-            }
+            border-radius: 5%;
         }
 
 
@@ -42,7 +52,7 @@
     &-view {
         display: flex;
         justify-content: flex-end;
-        border: 1px solid green;
+        // border: 1px solid green;
 
         p {
             margin-top: 3px;
@@ -81,6 +91,7 @@
 
         img {
             background-color: rgba(141, 153, 174, 0.5);
+            opacity: 0.4;
         }
     }
   }
