--- a/src/components/Navigation/_Header.scss
+++ b/src/components/Navigation/_Header.scss
@@ -10,6 +10,24 @@
     height: 80px;
     max-width: 1200px;
 
+    & a {
+      text-decoration: none;
+    }
+
+    &-logo {
+      font-weight: bold;
+      color: inherit;
+      border: 2px solid #353535;
+      border-radius: 50%;
+      padding: 0.3rem 0.5rem;
+      transition: 0.3s;
+
+      &:hover {
+        background-color: #353535;
+        color: #ADB5BD;
+      }
+    }
+
     &-logo-nav {
         width: 100%;
         display: flex;
@@ -46,14 +64,20 @@
                 @include pointer;
 
                 &:hover {
-                  color: grey;
+                  color: #ADB5BD;
                 }
             }
         }
 
         .resume {
-          border: 1px solid black;
+          border: 1px solid #353535;
           padding: 0.5em;
+          transition: 0.3s;
+
+          &:hover {
+            background-color: #353535;
+            color: #ADB5BD;
+          }
         }
       }
 
