--- a/src/components/_Project.scss
+++ b/src/components/_Project.scss
@@ -43,9 +43,9 @@
             flex-wrap: wrap;
     
             &-item {
-                border: 1px solid black;
-                background-color: black;
-                color: white;
+                border: 1px solid #353535;;
+                background-color: #353535;;
+                color: #fff;
                 margin-bottom: 15px;
                 margin-right: 5px;
                 padding: 0.3em;
