--- a/src/components/Navigation/_Header.scss
+++ b/src/components/Navigation/_Header.scss
@@ -1,4 +1,5 @@
 @import '../../styles/_mixins';
+@import '../../styles/_variables';
 
 /*Desktop View*/
 .header {
@@ -6,7 +7,6 @@
     justify-content: space-between;
     align-items: center;
     top: 0;
-    // padding: 0px 40px;
     height: 80px;
     max-width: 1200px;
 
@@ -17,14 +17,14 @@
     &-logo {
       font-weight: bold;
       color: inherit;
-      border: 2px solid #353535;
+      border: 2px solid $color-primary-dark;
       border-radius: 50%;
       padding: 0.3rem 0.5rem;
       transition: 0.3s;
 
       &:hover {
-        background-color: #353535;
-        color: #ADB5BD;
+        background-color: $color-primary-dark;
+        color: $color-primary-light;
       }
     }
 
@@ -64,19 +64,19 @@
                 @include pointer;
 
                 &:hover {
-                  color: #ADB5BD;
+                  color: $color-primary-light;
                 }
             }
         }
 
         .resume {
-          border: 1px solid #353535;
+          border: 1px solid $color-primary-dark;
           padding: 0.5em;
           transition: 0.3s;
 
           &:hover {
-            background-color: #353535;
-            color: #ADB5BD;
+            background-color: $color-primary-dark;
+            color: $color-primary-light;
           }
         }
       }
@@ -115,7 +115,7 @@
         grid-gap: 0px; 
 
         &.active {
-            background: #fff;
+            background: $color-primary;
             left: 0;
             opacity: 1;
             transition: all 0.5s ease;
@@ -133,7 +133,7 @@
           }
 
           .resume {
-            border: 1px solid black;
+            border: 1px solid $color-primary-dark;
             padding: 0.5em;
             margin-bottom: 2em;
           }
@@ -147,6 +147,23 @@
             height: 45px;
           }
       }
+    }
+  }
+
+  .dark-header{
+    .header-logo {
+      border: 2px solid $color-primary;
+      border-radius: 50%;
+    }
+
+    .active {
+      background: #353535;
+      box-shadow: 6px 5px 5px 5px rgba(0,0,0,0.11)
+    }
+
+    .resume {
+      border: 1px solid $color-primary;
+
     }
   }
 
