--- a/src/components/_ProjectSmall.scss
+++ b/src/components/_ProjectSmall.scss
@@ -1,4 +1,5 @@
 @import '../styles/_mixins';
+@import '../styles/_variables';
 
 .ProjectSmall {
     width: 30%;
@@ -12,18 +13,12 @@
     }
     
     &-main {
-        // width: 30%;
-        // border: 1px solid green;
-        // display: flex;
         position: relative;
 
         &-info {
             width: 100%;
-            // height: 50%;
-            // border: 1px solid red;
-            // color: rgb(255, 255, 255);
             font-weight: bold;
-            color: #353535;
+            color: $color-primary-dark;
             position: absolute;
             top: 25%;
             opacity: 0;
@@ -31,10 +26,6 @@
             h3 {
                 margin-bottom: -0.5em;
             }
-
-            // &-text {
-            //     font-weight: bold;
-            // }
         }
 
         img {
@@ -52,7 +43,6 @@
     &-view {
         display: flex;
         justify-content: flex-end;
-        // border: 1px solid green;
 
         p {
             margin-top: 3px;
@@ -70,6 +60,12 @@
     }
 
     @include hoverAnimation;
+}
+
+.dark-project-small {
+    .ProjectSmall-main-info {
+        color: $color-primary;
+    }
 }
 
 @media only screen and (max-width: 830px) and (min-width: 701px) {
