--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,3 +1,3 @@
-$color-primary: #edf2f4;
-$color-primary-light: #8D99AE;
-$color-primary-dark: #2B2D42;
+$color-primary: #fff;
+$color-primary-light: #ADB5BD;
+$color-primary-dark: #353535;
