added script to change index.html background on theme switch

--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -24,8 +24,8 @@
   }
   }
 
-  @mixin darkTheme {
-    background-color: $color-primary-dark;
-    color: #fff;
-    transition: 1s;
-  }
+  // @mixin darkTheme {
+  //   background-color: $color-primary-dark;
+  //   color: #fff;
+  //   transition: 1s;
+  // }
