--- a/src/_App.scss
+++ b/src/_App.scss
@@ -16,9 +16,9 @@ a {
 }
 }
 
-.dark {
-  @include darkTheme;
-}
+// .dark {
+//   @include darkTheme;
+// }
 
 ::-webkit-scrollbar {
     width: 10px;
