--- a/src/components/Navigation/_Header.scss
+++ b/src/components/Navigation/_Header.scss
@@ -103,6 +103,8 @@
 
       &-nav-options {
         display: flex;
+        align-items: center;
+        justify-content: center;
         width: 100%;
         height: 360px;
         position: absolute;
@@ -125,11 +127,9 @@
           }
 
           .option {
-            display: flex;
-            align-items: center;
-            justify-content: center;
             height: 10vw;
             padding: 10px 0px;
+            margin-right: 0;
           }
 
           .resume {
