added resume link

--- a/src/components/Navigation/_Header.scss
+++ b/src/components/Navigation/_Header.scss
@@ -135,6 +135,7 @@
           .resume {
             border: 1px solid $color-primary-dark;
             padding: 0.5em;
+            padding-bottom: 0;
             margin-bottom: 2em;
           }
       }
