--- a/src/components/_ProjectSmall.scss
+++ b/src/components/_ProjectSmall.scss
@@ -23,6 +23,10 @@
             top: 25%;
             opacity: 0;
 
+            h3, p {
+                padding-left: 0.5rem;
+            }
+
             h3 {
                 margin-bottom: -0.5em;
             }
