--- a/src/pages/_About.scss
+++ b/src/pages/_About.scss
@@ -12,7 +12,7 @@
     p {
         margin: 0 auto;
         margin-bottom: 2em;
-        width: 80%;
+        width: 60%;
     }
 
     &-icons {
@@ -30,6 +30,11 @@
   }
 
 @media only screen and (max-width: 700px) {
+    .About {
+        p {
+            width: 80%;
+        }
+    }
     .About-icons {
         @include center;
         flex-direction: column;
