updated heading and links

--- a/src/pages/_About.scss
+++ b/src/pages/_About.scss
@@ -5,8 +5,9 @@
     min-height: 100vh;
     flex-direction: column;
 
-    h1 {
+    h2 {
         text-align: center;
+        font-size: 3em;
     }
 
     p {
